<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    tools:context=".ComplaintId">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animationView"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_margin="40dp"
            app:lottie_rawRes="@raw/success_checkbox"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/msg_congratulation"
            android:textSize="25sp"
            android:layout_gravity="center"
            android:gravity="center"
            android:fontFamily="@font/poppins_bold"
            android:textColor="#4CAF50"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_complaintId"
                android:textSize="18sp"
                android:layout_marginEnd="5dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:fontFamily="@font/poppins_medium"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/textComplaintId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:fontFamily="@font/poppins_bold"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:gravity="center"/>

        </LinearLayout>

        <FrameLayout
            android:id="@+id/onBackHomePress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:padding="5dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_launcher_arrow_grey_foreground"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/btn_backToHome"
                android:textColor="@android:color/darker_gray"
                android:textSize="14sp" />
        </FrameLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>